background added to profile area and my app files module (2) + correction for "-webkit-box;" on safari + improved responsive

--- a/modules/mod_emundus_applications/style/mod_emundus_applications.css
+++ b/modules/mod_emundus_applications/style/mod_emundus_applications.css
@@ -102,6 +102,7 @@ button#back:hover, button#back:active, button#back:focus,
     border: 1px solid var(--red-500) !important;
     color: var(--neutral-0) !important;
     padding: var(--em-coordinator-vertical) var(--em-coordinator-horizontal);
+    border-radius: var(--em-coordinator-br);
 }
 
 .swal2-actions button.swal2-confirm.em-swal-confirm-button.btn.btn-success.swal2-styled:hover,
@@ -262,6 +263,7 @@ a.btn.btn-success:not(.btn-xs) {
 .view-featured .candidacy-files-list .row {
     position: relative;
     height: 100%;
+    overflow: hidden;
 }
 
 @media all and (max-width: 479px) {
