--- a/templates/g5_helium/custom/scss/tchooz.scss
+++ b/templates/g5_helium/custom/scss/tchooz.scss
@@ -2023,8 +2023,8 @@ div[id^='current_'] .mod_emundus_campaign__list_content,
 div[id^='current_'] .mod_emundus_campaign__list_content #background-shapes {
   position: absolute;
   z-index: 2;
-  width: 79%;
-  height: 52%;
+  width: 95%;
+  height: 63%;
   top: 0;
   right: 0;
   pointer-events: none;
@@ -2039,6 +2039,7 @@ div[id^='current_'] .mod_emundus_campaign__list_content #background-shapes {
   -webkit-mask-size: 300px;
   mask-origin: border-box;
   -webkit-mask-origin: border-box;
+  transform: scale(1.2);
 }
 
 .mod_emundus_campaign__pinned_campaign .mod_emundus_campaign__list_content #background-shapes {
@@ -2065,8 +2066,8 @@ div[id^='current_'] .mod_emundus_campaign__list_content #background-shapes {
 .mod_emundus_campaign__list_content #background-shapes.single-campaign-pinned {
   position: absolute;
   z-index: 2;
-  width: 40%;
-  height: 55%;
+  width: 64%;
+  height: 86%;
   top: 0;
   right: 0;
   pointer-events: none;
@@ -2081,6 +2082,7 @@ div[id^='current_'] .mod_emundus_campaign__list_content #background-shapes {
   -webkit-mask-size: 300px;
   mask-origin: border-box;
   -webkit-mask-origin: border-box;
+  transform: scale(1.6);
 }
 
 .view-featured .mod_emundus_campaign__list_content--default {
@@ -2201,6 +2203,11 @@ div[id^='current_'] .mod_emundus_campaign__list_content h4 {
   pointer-events: none;
   border-bottom-right-radius: 14px;
   transform: scale(1.15);
+  mask-image: url('/modules/mod_emundus_user_dropdown/assets/fond-formes-header-fonce.svg');
+  background: var(--em-profile-color);
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: contain;
 }
 
 .mod_emundus_campaign__details_content {
@@ -2211,8 +2218,8 @@ div[id^='current_'] .mod_emundus_campaign__list_content h4 {
 .mod_emundus_campaign__details_content #background-shapes {
   position: absolute;
   z-index: 0;
-  width: 120%;
-  height: 122%;
+  width: 111%;
+  height: 136%;
   top: 0;
   left: 0;
   pointer-events: none;
@@ -2227,6 +2234,7 @@ div[id^='current_'] .mod_emundus_campaign__list_content h4 {
   -webkit-mask-size: 300px;
   mask-origin: border-box;
   -webkit-mask-origin: border-box;
+  transform: scale(1.1);
 }
 
 .mod_emundus_campaign__details_content .em-applicant-default-font,
